--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #212529; /* Dark background */
+  background-color: rgb(46, 98, 158); /* Dark background */
 }
 
 .navbar-brand {
