--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -1,6 +1,22 @@
-.card:hover {
-    transform: translateY(-2px);
+.card-body {
+    border: 2px solid rgb(46, 98, 158);
+    border-radius: 20px;
+    text-transform: uppercase;
+    transition: 0.6s;
+}
+
+.card-body:hover {
     box-shadow: 0 6px 16px rgba(0, 0, 0 ,0.8);
-    transition: all 0.2s ease-in-out;
+    transition: all 0.6s ease-in-out;
     cursor: pointer;
+}
+
+.task-item {
+    transition: all 0.3s;
+}
+
+.task-done {
+    opacity: 0.6;
+    text-decoration: line-through;
+    transform: scale(0.98);
 }
