--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -1,7 +1,6 @@
 .card-body {
-    border: 2px solid rgb(46, 98, 158);
-    border-radius: 20px;
     text-transform: uppercase;
+        box-shadow: 0 3px 8px rgba(0, 0, 0 ,0.8);
     transition: 0.6s;
 }
 
